--- a/index.html
+++ b/index.html
@@ -30,18 +30,41 @@
     <!-- header -->
     <!-- header -->
 
- 
-      <section class="one">
-         <div class="halfe-width"><h1>Mi LED TV 4A PRO 32</h1>
-          <p>
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit. Exercitation
-            veniam consequat sunt nostrud amet.
-          </p>
-          <h1 class="pink">$1289</h1>
-          <a class="H-button" href="">Buy Now →</a></div>
-  <div class="halfe-width"> <img class="xbox" src="images/banner-images/xbox.png" alt=""></div>
-      </section>
- 
+    <section class="one">
+      <nav class="halfe-width">
+        <h1>Mi LED TV 4A PRO 32</h1>
+        <p>
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </p>
+        <h1 class="pink">$1289</h1>
+        <a class="H-button" href="">Buy Now →</a>
+      </nav>
+      <nav class="halfe-width">
+        <img class="xbox" src="images/banner-images/xbox.png" alt="" />
+      </nav>
+    </section>
+ <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  -->
+  <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- second section --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  -
+   <!cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  -->
+    <section class="cat">
+      <nav class="cat1">
+        <h1>Watch</h1>
+        <img src="images/categories/watch.png" alt="" />
+      </nav>
+      <nav class="cat2">
+        <h1>Bag</h1>
+        <img src="images/categories/bag.png" alt="" />
+      </nav>
+      <nav class="cat3">
+        <h1>Shoes</h1>
+        <img src="images/categories/shoes.png" alt="" />
+      </nav>
+    </section>
+    <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  -->
+  <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  -->
+   <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  --> <!-- cat  -->
+
   </body>
 </html>
